# pkgstats-cli

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .golangci.yaml  .travis.yml  Cargo.toml  Dockerfile  Makefile  README.md  build.rs  client.go  client_test.go  dev.just  go.mod  go.sum  integration.bats  justfile  main.go  main_test.go  mock_test.go  pacman.go  pacman_test.go  pkgstats.service  pkgstats.sh  server.php  system.go  system_test.go  tests.bats
.github/: dependabot.yml
.github/workflows/: codeql-analysis.yml  test.yml  update-go.yml
cmd/: architecture.go  architecture_test.go  completion.go  main.go  request.go  root.go  root_test.go  search.go  search_test.go  show.go  show_test.go  submit.go  submit_test.go  testhelper_cmd_test.go  testhelper_pacman_test.go  testhelper_server_test.go  version.go  version_test.go
init/: pkgstats.service  pkgstats.timer
internal/config/: config.go
internal/filter/: filter.go  filter_test.go  packages.go  server.go  server_test.go
internal/pacman/: config_map.go  packages.go  pacman.go  pacman_integration_test.go  pacman_test.go  parser.go  server.go
internal/pkgstats/: client.go  client_test.go
internal/system/: system _386.go  system _arm.go  system _arm64.go  system.go  system_386.go  system_386.s  system_386_test.go  system_amd64.go  system_amd64_test.go  system_arm.go  system_arm64.go  (+13 more)
just/: aarch64.just  arm.just  dev.just  i686.just  loongarch64.just  riscv64.just  x86_64.just
src/: cli.rs  main.rs
tests/: cpu.go  integration.bats  mocks.bash  pkgstats.sh.bats  server.php
(+59 files in other folders)
