[package]
name = "pkgstats"
version = "4.0.0"
edition = "2021"
build = "build.rs"

[dependencies]
clap = { version = "4", features = ["derive", "cargo"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1.0.104", features = [] }
tabwriter = { version = "1", features = [] }
url = { version = "2", features = [] }
percent-encoding = { version = "2", features = [] }
rayon = { version = "1", features = [] }
anyhow = { version = "1", features = [] }
ureq = { version = "2", default-features = false, features = ["json", "native-tls", "gzip"] }
native-tls = { version = "0.2", features = [] }

[features]
bundled-tls = ["native-tls/vendored"]

[target.'cfg(any(target_family = "unix"))'.dependencies]
nix = { version = "0.27", default-features = false, features = ["feature"] }

[target.'cfg(any(all(target_arch = "x86", target_feature = "sse"), target_arch = "x86_64"))'.dependencies]
raw-cpuid = { version = "11", features = [] }

[build-dependencies]
clap = { version = "4", features = ["derive", "cargo"] }
clap_complete = { version = "4", features = [] }

[profile.release]
strip = true
lto = true
panic = "abort"
